# databases-with-python

./: .gitignore  .pdm-python  CNAME  LICENSE  README.md  deletar.txt  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  xxx.old
_scripts/: export_requirements.py  make_requirements.py
docs/: ms-sql-server-pyodbc.md
docs/source/: conf.py  docker.rst  index.rst  mariadb-connector.rst  mariadb-mysql-connector.rst  mariadb.rst  mongodb.rst  mongoengine.rst  mssql-server.rst  mysql-connector.rst  mysql.rst  nosql.rst  podman.rst  postgresql.rst  pymongo.rst  redis.rst  sql.rst  sqlalchemy.rst  sqlite.rst
mariadb/: ConnectMariaDB.py  Pipfile
mariadb-sqlalchemy/: Pipfile  docker-compose.yml  models.py
mongodb-mongoengine/: Pipfile  models.py
mongodb-pymongo/: ConnectMongoDB.py  Pipfile
ms-access/: ConectarAccess.py
mssql-server/: ConnectMSSQL.py  Pipfile  README.md
mssql-server-sqlalchemy/: Pipfile  README.md  docker-compose.yml  models.py
mysql/: ConnectMySQL.py  docker-compose.yml
mysql-sqlalchemy/: models.py
postgresql/: ConnectPostgreSQL.py  Pipfile  docker-compose.yml
postgresql-sqlalchemy/: Pipfile  docker-compose.yml  models.py
redis/: Pipfile  main-redis.py  main-strict.py
sqlite3-sqlalchemy/: Pipfile  models.py
src/mariadb/: ConnectMariaDB.py  docker-compose.yml  main.py  main_sqlalchemy.py  mariadb_connector.py  mariadb_connector_sqlalchemy.py  mariadb_mysql_connector.py  mariadb_mysql_connector_sqlalchemy.py  mysql_connector.py  mysql_connector_sqlalchemy.py
src/mariadb-sqlalchemy/: docker-compose.yml  models.py
src/mongodb/: docker-compose.yml  main.py  main_mongoengine.py
src/mongodb-mongoengine/: models.py
src/mongodb-pymongo/: ConnectMongoDB.py  docker-compose.yml
src/ms-access/: ConectarAccess.py  example-bkp.accdb  main.py
src/mssql-server/: ConnectMSSQL.py  docker-compose.yml  main.py  main_sqlalchemy.py
src/mssql-server-sqlalchemy/: models.py
src/mysql/: ConnectMySQL.py  docker-compose.yml  main.py  main_sqlalchemy.py
src/mysql-sqlalchemy/: models.py
src/postgresql/: ConnectPostgreSQL.py  docker-compose.yml  main.py  main_sqlalchemy.py
src/postgresql-sqlalchemy/: docker-compose.yml  models.py
src/redis/: docker-compose.yml  main-redis.py  main-strict.py  main.py  main_redis.py
src/sqlite-3/: main.py  main_sqlalchemy.py
src/sqlite3/: ConnectSQLite.py  main.py
src/sqlite3-sqlalchemy/: main.py  models.py
