[tool.poetry]
name = "databases-with-python"
version = "0.1.0"
description = "Como utilizar a linguagem de programação Python com diversos bancos de dados."
authors = ["Renato Cruz <natorsc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mysql-connector-python = "^8.4.0"
mongoengine = "^0.28.2"
pymongo = "^4.7.3"
pyodbc = "^5.1.0"
sqlalchemy = "^2.0.31"
psycopg = {extras = ["binary", "pool"], version = "^3.1.19"}
redis = {extras = ["hiredis"], version = "^5.0.6"}
mariadb = "^1.1.10"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"
ruff = "^0.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
